Fix visibility of drop down.

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ p{
 }
 /* NAV BAR */
 .nav {
-    overflow: hidden;
+    overflow: visible;;
     width: 100%;
     background-color: forestgreen;
     color: white;
